@@ -57,7 +57,7 @@ public class FreezeProgram {
         Durable.freeze(snapshot -> {
             try {
                 byte[] bytes = serialize(snapshot);
-                Files.write(Path.of(snapshotFile), bytes);
+                Files.write(Paths.get(snapshotFile), bytes);
                 System.out.println("FREEZE_COMPLETE");
                 System.out.println("SNAPSHOT_SIZE=" + bytes.length);
                 System.out.println("FRAME_COUNT=" + snapshot.frameCount());
