@@ -65,7 +65,7 @@ public class ManyLocalsFreezeProgram {
         Durable.freeze(snapshot -> {
             try {
                 byte[] bytes = serialize(snapshot);
-                Files.write(Path.of(snapshotFile), bytes);
+                Files.write(Paths.get(snapshotFile), bytes);
                 System.out.println("FREEZE_COMPLETE");
                 System.out.flush();
             } catch (Exception ex) {
