@@ -85,7 +85,7 @@ public class SwitchFreezeProgram {
         Durable.freeze(snapshot -> {
             try {
                 byte[] bytes = serialize(snapshot);
-                Files.write(Path.of(snapshotFile), bytes);
+                Files.write(Paths.get(snapshotFile), bytes);
                 System.out.println("FREEZE_COMPLETE");
                 System.out.flush();
             } catch (Exception e) {
